[tool.poetry]
name = "spug-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spug_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^2.2.28"
asgiref = "^3.5.2"
channels-redis = "^2.4.1"
paramiko = "^2.12.0"
django-redis = "^4.10.0"
requests = "^2.28.1"
gitpython = "^3.1.29"
python-ldap = "^3.4.3"
openpyxl = "^3.0.10"
user-agents = "^2.2.0"
channels = "^2.3.1"
apscheduler = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
